--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj.filters
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="TheFighter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -93,6 +96,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="TheFighter.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy1.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
