--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj
@@ -178,6 +178,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="TheMissile.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="ThePlayer.cpp">
       <SubType>
       </SubType>
@@ -218,6 +222,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="TheFighterPair.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="TheMissile.h">
       <SubType>
       </SubType>
     </ClInclude>
