--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj
@@ -165,6 +165,10 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameLogic.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TheScore.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Shot.cpp" />
     <ClCompile Include="TheBackground.cpp">
       <SubType>
@@ -220,6 +224,10 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLogic.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="TheScore.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Shot.h" />
     <ClInclude Include="TheBackground.h">
       <SubType>
