--- a/Knightmare/Knightmare Engine.vcxproj
+++ b/Knightmare/Knightmare Engine.vcxproj
@@ -166,6 +166,10 @@
   <ItemGroup>
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="ContentManager.cpp" />
+    <ClCompile Include="OnScreenText.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp">
       <SubType>
@@ -198,6 +202,10 @@
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="ContentManager.h" />
+    <ClInclude Include="OnScreenText.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h">
       <SubType>
