--- a/Knightmare/Knightmare Engine.vcxproj.filters
+++ b/Knightmare/Knightmare Engine.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OnScreenText.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Utilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OnScreenText.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
