--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj
@@ -169,6 +169,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="TheHighScore.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TheScore.cpp">
       <SubType>
       </SubType>
@@ -229,6 +233,10 @@
     <ClInclude Include="GameLogic.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="PowerUp.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="TheHighScore.h">
       <SubType>
       </SubType>
     </ClInclude>
