New Branch, for Boss that shows up every five waves. See notes.

--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj.filters
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="TheHighScore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TheBoss.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TheHighScore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TheBoss.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
