--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj.filters
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="TheBoss.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TheBossTurret.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -141,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TheBoss.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TheBossTurret.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
