--- a/Knightmare/Knightmare Engine.vcxproj.filters
+++ b/Knightmare/Knightmare Engine.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClCompile Include="EntityManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Managers.cpp">
+    <ClCompile Include="TheManagers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ParticleManager.cpp">
@@ -101,7 +101,7 @@
     <ClInclude Include="EntityManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Managers.h">
+    <ClInclude Include="TheManagers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
