--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj
@@ -181,6 +181,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="TheHomingMine.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TheScore.cpp">
       <SubType>
       </SubType>
@@ -253,6 +257,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="TheHighScore.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="TheHomingMine.h">
       <SubType>
       </SubType>
     </ClInclude>
