--- a/Asteroids Reimagined/Asteroids Reimagined.vcxproj
+++ b/Asteroids Reimagined/Asteroids Reimagined.vcxproj
@@ -158,6 +158,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EnemyCollisions.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="EnemyControl.cpp">
       <SubType>
       </SubType>
@@ -238,6 +242,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Enemy2.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="EnemyCollisions.h">
       <SubType>
       </SubType>
     </ClInclude>
