--- a/Knightmare/Knightmare Engine.vcxproj
+++ b/Knightmare/Knightmare Engine.vcxproj
@@ -220,6 +220,7 @@
     </ClInclude>
     <ClInclude Include="ExplosionControl.h" />
     <ClInclude Include="LineModel.h" />
+    <ClInclude Include="raymath_operators.h" />
     <ClInclude Include="TheManagers.h">
       <SubType>
       </SubType>
